# TrafficMagnitTestTask

./: Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml
currency_service/: runner.dev.sh
currency_service/apps/currency/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
currency_service/apps/currency/management/commands/: export_rates_csv.py  sync_currencies.py
currency_service/apps/currency/migrations/: 0001_initial.py  0002_alter_currency_table.py  0003_alter_currency_iso_code.py
currency_service/runners/: asgi.py  wsgi.py
currency_service/services/celery/: __init__.py  currency_tasks.py
currency_service/settings/: __init__.py  api_settings.py  base_settings.py  celery_settings.py  static_settings.py  urls.py
